--- a/components/profile/member_profile.jade
+++ b/components/profile/member_profile.jade
@@ -109,36 +109,36 @@ template(name='member_profile_layout')
                         a.ui.compact.button(href="/member/#{username}/bookmarks" class="{{isActiveRoute 'member_bookmarks'}}")
                             +ismall name='star' classes='ui inline image'
                             |bookmarks
-                        a.ui.compact.button(href="/member/#{username}/contact" class="{{isActiveRoute 'member_contact'}}")
-                            +ismall name='phone' classes='ui inline image'
-                            |contact
-                        a.ui.compact.button(href="/member/#{username}/comparison" class="{{isActiveRoute 'member_comparison'}}")
-                            +ismall name='scales' classes='ui inline image'
-                            |comparison
-                        a.ui.compact.button(href="/member/#{username}/offers" class="{{isActiveRoute 'member_offers'}}")
-                            +ismall name='sell' classes='ui inline image'
-                            |offers
-                        a.ui.compact.button(href="/member/#{username}/tags" class="{{isActiveRoute 'member_tags'}}")
-                            +ismall name='tags' classes='ui inline image'
-                            |tags
-                        a.ui.compact.button(href="/member/#{username}/messages" class="{{isActiveRoute 'member_messages'}}")
-                            +ismall name='new-message' classes='ui inline image'
-                            |mail
-                        a.ui.compact.button(href="/member/#{username}/karma" class="{{isActiveRoute 'member_karma'}}")
-                            +ismall name='yin-yang' classes='ui inline image'
-                            |karma
-                        a.ui.compact.button(href="/member/#{username}/workhistory" class="{{isActiveRoute 'member_workhistory'}}")
-                            +ismall name='resume' classes='ui inline image'
-                            |work history
-                        a.ui.compact.button(href="/member/#{username}/stats" class="{{isActiveRoute 'member_stats'}}")
-                            +ismall name='line-chart' classes='ui inline image'
-                            |stats
-                        a.ui.compact.button(href="/member/#{username}/votes" class="{{isActiveRoute 'member_votes'}}")
-                            +ismall name='elections' classes='ui inline image'
-                            |votes
-                        a.ui.compact.button(href="/member/#{username}/notifications" class="{{isActiveRoute 'member_notifications'}}")
-                            +ismall name='appointment-reminders' classes='ui inline image'
-                            |notifications
+                        //- a.ui.compact.button(href="/member/#{username}/contact" class="{{isActiveRoute 'member_contact'}}")
+                        //-     +ismall name='phone' classes='ui inline image'
+                        //-     |contact
+                        //- a.ui.compact.button(href="/member/#{username}/comparison" class="{{isActiveRoute 'member_comparison'}}")
+                        //-     +ismall name='scales' classes='ui inline image'
+                        //-     |comparison
+                        //- a.ui.compact.button(href="/member/#{username}/offers" class="{{isActiveRoute 'member_offers'}}")
+                        //-     +ismall name='sell' classes='ui inline image'
+                        //-     |offers
+                        //- a.ui.compact.button(href="/member/#{username}/tags" class="{{isActiveRoute 'member_tags'}}")
+                        //-     +ismall name='tags' classes='ui inline image'
+                        //-     |tags
+                        //- a.ui.compact.button(href="/member/#{username}/messages" class="{{isActiveRoute 'member_messages'}}")
+                        //-     +ismall name='new-message' classes='ui inline image'
+                        //-     |mail
+                        //- a.ui.compact.button(href="/member/#{username}/karma" class="{{isActiveRoute 'member_karma'}}")
+                        //-     +ismall name='yin-yang' classes='ui inline image'
+                        //-     |karma
+                        //- a.ui.compact.button(href="/member/#{username}/workhistory" class="{{isActiveRoute 'member_workhistory'}}")
+                        //-     +ismall name='resume' classes='ui inline image'
+                        //-     |work history
+                        //- a.ui.compact.button(href="/member/#{username}/stats" class="{{isActiveRoute 'member_stats'}}")
+                        //-     +ismall name='line-chart' classes='ui inline image'
+                        //-     |stats
+                        //- a.ui.compact.button(href="/member/#{username}/votes" class="{{isActiveRoute 'member_votes'}}")
+                        //-     +ismall name='elections' classes='ui inline image'
+                        //-     |votes
+                        //- a.ui.compact.button(href="/member/#{username}/notifications" class="{{isActiveRoute 'member_notifications'}}")
+                        //-     +ismall name='appointment-reminders' classes='ui inline image'
+                        //-     |notifications
                     div.global_container
                         +yield
     +footer 
