--- a/components/rentals/rental_view.jade
+++ b/components/rentals/rental_view.jade
@@ -96,35 +96,6 @@ template(name='rental_stats')
     //-         .ui.button.new_slot
     //-             |new slot
         
-template(name='reservation_slot_template')
-    if is_grandparent_author
-        with slot
-            .ui.header $#{price}
-            unless reservation
-                +boolean_edit key='prepaid' direct=true
-                +number_edit key='price' direct=true
-                +remove_button
-            //- +rental
-    else
-        .ui.divider
-        .ui.header $#{slot.price}
-        //- +boolean_edit key='rented' direct=true
-        if reservation
-            with reservation
-                +reservation_template
-        else
-            //- with slot
-            .ui.green.button.rent_item rent item
-            
-template(name='reservation_template')        
-    .ui.header reservation
-    +author_info
-    .ui.small.header #{_author_username}
-    if is_author
-        +text_edit key='notes' direct=true
-        +remove_button
-
-
     
 template(name='rental_status')
     if available 
@@ -136,7 +107,7 @@ template(name='reserve_button')
     .ui.big.green.fluid.button.new_reservation 
         .ui.inverted.header 
             |reserve
-            +i name='play' classes='ui inline mini image'
+            //- +i name='play' classes='ui inline mini image'
 
 
 
@@ -156,9 +127,9 @@ template(name='rental_card_template')
                     a.zoom(href="/rental/#{_id}/view")
                         +image_view key='image' direct=true classes='zoom'
             .eight.wide.column
-                span(title='views')
-                    +ismall name='eye'
-                    |#{views}
+                if security_deposit_required
+                    +i name='safe-in'
+                    |$#{security_deposit_amount} security deposit
                 div
                 +ismall name='marker'
                 each location_tags
@@ -167,28 +138,28 @@ template(name='rental_card_template')
                 +ismall name='tags'
                 each tags
                     .ui.basic.label #{this}
+                //- div
+                //- +user_list_toggle key='bookmark_ids' add_icon='bookmark outline' remove_icon='bookmark' add_label='bookmark' remove_label='unbookmark'  big=true
+                //- +voting
                 div
-                +user_list_toggle key='bookmark_ids' add_icon='bookmark outline' remove_icon='bookmark' add_label='bookmark' remove_label='unbookmark'  big=true
-                +voting
-                div
-                if currentUser
-                    if can_edit
-                        a.ui.button(href="/rental/#{_id}/edit/info")
-                            i.pencil.icon
-                            |edit
-                a.ui.button(href="/rental/#{_id}/view")
-                    |view
-                    i.right.chevron.icon
-                +author_info
+                //- if currentUser
+                //-     if can_edit
+                //-         a.ui.button(href="/rental/#{_id}/edit")
+                //-             i.pencil.icon
+                //-             |edit
+                //- a.ui.button(href="/rental/#{_id}/view")
+                //-     |view
+                //-     i.right.chevron.icon
+                //- +author_info
                 +reserve_button
             .four.wide.column
                 .ui.list
                     .item #{views} views
                     .item #{reservation_count} reservations
                     .item $#{total_earnings} total earnings
-                    .item #{total_rental_hours} total reservation hours
+                    .item #{total_rental_hours} reserved hours
                     .item $#{average_rental_cost} avg rental cost
-                    .item #{average_rental_duration}hrs avg rental duration
+                    .item #{average_rental_duration}hr avg rental
                 +single_user_view key='owner_username' label='owner' direct=true
                 +single_user_view key='handler_username' label='handler' direct=true
 
