--- a/client/nav.jade
+++ b/client/nav.jade
@@ -24,15 +24,15 @@ template(name='nav')
                 if currentUser
                     unless logging_out
                         if is_member
-                            a.ui.button(href="/member/#{currentUser.username}/finance" class="{{isActiveRoute regex='member_finance'}}" title='credits')
-                                i.coins.grey.icon
-                                |{{int currentUser.credit}}
+                            //- a.ui.button(href="/member/#{currentUser.username}/finance" class="{{isActiveRoute regex='member_finance'}}" title='credits')
+                            //-     i.coins.grey.icon
                             a.ui.button(href="/member/#{currentUser.username}/dashboard" class=member_nav_button_class title=member_nav_button_title)
                                 if currentUser.profile_image_id
                                     img.ui.avatar.inline.image(src="{{c.url currentUser.profile_image_id width=100 height=100 gravity='face' crop='fill'}}")
                                 else
                                     +i name='user' classes='ui mini inline image'
                                 span.mobile.hidden #{currentUser.name}
+                                    |{{int currentUser.credit}}
                         else
                             a.ui.button(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user_profile'}}")
                                 if currentUser.profile_photo
